--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!doctype html>
-<html lang="en">
+<html lang="de" class="dark">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>chatty-cockpit</title>
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="manifest" href="/manifest.json" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+    <meta name="theme-color" content="#e94560" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="description" content="Chatty Cockpit - Dein persönliches Dashboard" />
+    <title>Chatty Cockpit</title>
   </head>
-  <body>
+  <body class="bg-gray-900 text-white">
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
